--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@onwidget/astrowind",
+  "name": "itt-website",
   "version": "1.0.0-beta.52",
-  "description": "AstroWind: A free template using Astro 5.0 and Tailwind CSS. Astro starter theme.",
+  "description": "Website for IT Technicians, providing nationwide on-site IT support.",
   "type": "module",
   "private": true,
   "engines": {
